# OpenRayTracingRenderer

./: CMakeLists.txt  main.cpp
include/: Camera.h  FrameBuffer.h  Hittable.h  Material.h  Ray.h  Sphere.h  SpinLock.h  ThreadPool.h  Tool.h
src/: Camera.cpp  FrameBuffer.cpp  Hittable.cpp  Sphere.cpp  ThreadPool.cpp
